force-app/main/default/objects/ConfigLine__c/ConfigLine__c.object-meta.xml
<CustomObject>
    <label>配置清单行</label>
    <nameField>
        <label>配置清单名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>配置清单行</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>