force-app/main/default/objects/ConfigLine__c/fields/ConfigurationList__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配置清单</label>
    <referenceTo>ConfigurationList__c</referenceTo>
    <relationshipLabel>配置清单行</relationshipLabel>
    <relationshipName>ConfigLines</relationshipName>
    <type>Lookup</type>
</CustomField>