force-app/main/default/objects/ConfigLine__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>规格说明</label>
    <length>255</length>
    <type>Text</type>
</CustomField>