force-app/main/default/objects/ConfigLine__c/fields/Num__c.field-meta.xml
<CustomField>
    <fullName>Num__c</fullName>
    <label>数量</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>