force-app/main/default/objects/ConfigLine__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <label>制造商</label>
    <length>255</length>
    <type>Text</type>
</CustomField>