force-app/main/default/objects/ConfigLine__c/fields/ProductModel__c.field-meta.xml
<CustomField>
    <fullName>ProductModel__c</fullName>
    <label>产品型号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>